<resources>
    <string name="app_name">ApprhythmiaMD</string>
    <string name="cpr_nr">CPR-number</string>
    <string name="choose_done">Done</string>
    <string name="choose_patient">Choose Patient</string>
    <string name="go_2">Go</string>
    <string name="PTinfo">Patient info</string>
    <string name="PTnotes">Patient notes</string>
    <string name="Arrhythmias">Arrhythmias</string>
    <string name="Statistics">Statistics</string>
    <string name="ECG">ECG signal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

</resources>
