<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="com.helge.arrythmiamd.MainMenuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PTinfo"
        android:id="@+id/patientinfo_button"
        android:textColor="@color/buttonTextColor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:layout_alignStart="@+id/patientnotes_button"
        android:layout_alignEnd="@+id/patientnotes_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PTnotes"
        android:textColor="@color/buttonTextColor"
        android:id="@+id/patientnotes_button"
        android:layout_below="@+id/patientinfo_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Arrhythmias"
        android:textColor="@color/buttonTextColor"
        android:id="@+id/arrhythmias_button"
        android:layout_below="@+id/patientnotes_button"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/patientnotes_button"
        android:layout_alignEnd="@+id/patientnotes_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Statistics"
        android:textColor="@color/buttonTextColor"
        android:id="@+id/statistics_button"
        android:layout_below="@+id/arrhythmias_button"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/patientnotes_button"
        android:layout_alignEnd="@+id/patientnotes_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ECG"
        android:textColor="@color/buttonTextColor"
        android:id="@+id/ECGButton"
        android:layout_below="@+id/statistics_button"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/patientnotes_button"
        android:layout_alignEnd="@+id/patientnotes_button"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/apprhythmia"
        android:src="@mipmap/apprhythmia"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrhythmiaECG"
        android:src="@mipmap/aecg"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
