<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="com.helge.arrythmiamd.ChoosePatientActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apprhythmia"
            android:src="@mipmap/apprhythmia"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_patient"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="115dp" />

        <EditText
            android:id="@+id/current_patient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpr_nr"
            android:inputType="number"
            android:layout_marginTop="48dp"
            android:layout_below="@+id/textView"
            android:maxLength="11"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_done"
            android:textColor="@color/buttonTextColor"
            android:id="@+id/choose_done"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrhythmiaECG"
            android:src="@mipmap/aecg"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

</RelativeLayout>
